# transmission_client_mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MAINTAINERS.md  README.md  commitlint.config.js  config.toml.example  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  repository-overview.md  start-session.sh
.claude/rules/: commit-messages.md  docstrings.md  llm-ignores.md  maintainers.md  no-autocommit.md  readme-acknowledgement.md  readme-docker-compose.md  readme-tools.md  repository-overview.md
.github/workflows/: ci.yml  publish.yml
aidlc-docs/: aidlc-state.md  audit.md  github-actions-qa.md
aidlc-docs/inception/: commit-message-questions.md  readme-questions.md  standards-questions.md  standards.md  workflow-plan.md
aidlc-docs/inception/requirements/: add-torrent-questions.md  get-torrent-questions.md  (+4 more)
docs/: ratios-explained.md  review-phase-9.xml
scripts/: install-hooks.sh  last-changes.sh  quality-check.sh  test-docker.sh
src/transmission_mcp/: __init__.py  __main__.py  config.py  logging.py  queue.py  server.py  tools.py
tests/fixtures/: dsl-2024.rc6.iso.torrent
tests/integration/: conftest.py  test_add_torrent.py  test_connection.py  test_get_torrent.py  test_list_files_for_torrent.py  test_list_torrents.py  test_list_torrents_smoke.py  test_management_tools.py
tests/unit/: test_add_torrent.py  test_config.py  test_dockerfile.py  test_get_torrent.py  test_list_files_for_torrent.py  test_list_queued_additions.py  test_list_torrents.py  test_logging.py  test_management_tools.py  test_queue.py
