[project]
name = "transmission-mcp"
version = "0.1.0"
description = "MCP server for controlling Transmission BitTorrent client"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "transmission-rpc==7.0.11",
]

[project.scripts]
transmission-mcp = "transmission_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transmission_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["transmission_mcp"]
